--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-nw-seed</title>
-    <link rel="shortcut icon" type="image/ico" href="static/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="static/logo.png" />
   </head>
   <body>
     <div id="app"></div>
